--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<i class="fa-solid fa-bars"></i> 
 				</label>
     <ul class="menu">
-        <li><a href="Food.html" target="blank">Home</a></li>
+        <li><a href="index.html" target="blank">Home</a></li>
         <li><a href="Service.html">Service</a></li>
         <li><a href="team.html">Our Team</a></li>
         <li><a href="About.html">About</a></li>
