--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
             <i class="fa-solid fa-bars"></i> 
         </label>
     <ul class="menu">
-        <li><a href="Food.html" target="blank">Home</a></li>
+        <li><a href="index.html" target="blank">Home</a></li>
         <li><a href="Service.html"target="_blank">Service</a></li>
         <li><a href="team.html" target="_blank">Our Team</a></li>
         <li><a href="About.html">About</a></li>
